# ImageROICut

./: CMakeLists.txt  README.md  main.cpp
